--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ async-timeout==5.0.1
 asyncio==4.0.0
 attrs==25.3.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.1.8
 comm==0.2.3
 contourpy==1.3.0
@@ -20,11 +21,12 @@ decorator==5.2.1
 dj-database-url==3.0.1
 Django==4.2.23
 django-cors-headers==4.7.0
-djangorestframework==3.16.0
+djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.8.1
 dynaconf==3.2.11
+et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 executing==2.2.0
 fonttools==4.59.0
@@ -51,6 +53,7 @@ matplotlib-inline==0.1.7
 multidict==6.6.3
 nest-asyncio==1.6.0
 numpy==2.0.2
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
 parso==0.8.4
@@ -92,27 +95,3 @@ validators==0.35.0
 wcwidth==0.2.13
 yarl==1.20.1
 zipp==3.23.0
-aiofiles==24.1.0
-aiogram==3.21.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-annotated-types==0.7.0
-async-timeout==5.0.1
-asyncio==4.0.0
-attrs==25.3.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-frozenlist==1.7.0
-idna==3.10
-magic-filter==1.0.12
-multidict==6.6.3
-propcache==0.3.2
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.1.1
-requests==2.32.4
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-yarl==1.20.1
